# marsops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GUIDE.md  LICENSE  README.md  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: anomaly-handler.md  code-reviewer.md  mission-planner.md  path-finder.md  telemetry-analyst.md  test-writer.md
.claude/hooks/: block-dangerous.sh
.github/workflows/: ci.yml
.hypothesis/constants/: 0af70df336a8687e  21b68f3e030baaee  89361ee221ffcff0  969397deb93529e4  e7c1619a94c44711
docs/: anomaly_recovery_trace.txt  architecture.md  mcp_setup.md
scripts/: demo_anomaly.py  demo_mission.py  demo_path.py  demo_planner.py  sanity_recovery.py
src/marsops/: __init__.py
src/marsops/mcp_server/: __init__.py  server.py  state.py
src/marsops/planner/: __init__.py  astar.py  cost.py  dry_run.py  mission.py  mission_planner_runtime.py  path_stats.py  recovery.py
src/marsops/simulator/: __init__.py  anomalies.py  engine.py  rover.py
src/marsops/telemetry/: __init__.py  events.py  reporter.py
src/marsops/terrain/: __init__.py  __main__.py  loader.py
src/marsops/viz/: __init__.py  path_plot.py
src/marsops/web_api/: __init__.py  app.py  events.py  parser.py
tests/: test_anomalies.py  test_astar.py  test_dry_run.py  test_engine.py  test_engine_recovery.py  test_mcp_state.py  test_mcp_tools.py  test_mission_models.py  test_mission_planner_runtime.py  test_path_plot.py  test_path_stats.py  test_recovery.py  test_reporter.py  test_rover.py  test_telemetry_events.py  test_terrain_loader.py  test_web_app.py  test_web_parser.py
web/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx  store.ts  types.ts
web/src/api/: client.ts  websocket.ts
web/src/debug/: DebugOverlay.tsx  ErrorBoundary.tsx  install.ts  useLogAction.ts
web/src/scene/: DustStorm.tsx  FollowCamera.tsx  MarsScene.tsx  PathLine.tsx  Rover.tsx  Terrain.tsx
web/src/ui/: AnomalyBanner.tsx  CameraToggle.tsx  EventLog.tsx  MissionComplete.tsx  MissionControls.tsx  MissionProgress.tsx  (+3 more)
