[project]
name = "marsops"
version = "0.1.0"
description = "Autonomous Mars rover mission planner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "mcp>=1.27.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "rasterio>=1.4.4",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
marsops-mcp = "marsops.mcp_server.server:main"
marsops-web = "marsops.web_api.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marsops"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.11",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.9",
    "types-requests>=2.33.0.20260402",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
# Use ruff defaults (Black-compatible).

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["rasterio.*", "plotly.*", "networkx.*", "scipy.*", "mcp.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=src/marsops --cov-report=term-missing --timeout=30"
